--- a/drivers/adc/CMakeLists.txt
+++ b/drivers/adc/CMakeLists.txt
@@ -6,3 +6,15 @@ zephyr_library_sources_ifdef(CONFIG_ADC_SAM_AFEC	adc_sam_afec.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_NRFX_ADC	adc_nrfx_adc.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_NRFX_SAADC	adc_nrfx_saadc.c)
 zephyr_library_sources_ifdef(CONFIG_ADC_INTEL_QUARK_D2000	adc_intel_quark_d2000.c)
+
+if(CONFIG_ADC_STM32)
+zephyr_library_sources(adc_stm32.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F0X adc_stm32_v1.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32L0X adc_stm32_v1.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F1X adc_stm32_v2.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F2X adc_stm32_v2.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F4X adc_stm32_v2.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F7X adc_stm32_v2.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32F3X adc_stm32_v3.c)
+zephyr_library_sources_ifdef(CONFIG_SOC_SERIES_STM32L4X adc_stm32_v3.c)
+endif()
